erros que eu nao sabia
era os parenteses

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <script>
       function enviarWhats(event) {
-        event.preventDefault();
+        event.preventDefault;
 
         const nome = document.getElementById("nome").value();
         const mensagem = document.getElementById("mensagem").value();
@@ -119,3 +119,4 @@
     </script>
   </body>
 </html>
+
