--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@
 
     <script>
       function enviarWhats(event) {
-        event.preventDefault;
+        event.preventDefault();
 
-        const nome = document.getElementById("nome").value();
-        const mensagem = document.getElementById("mensagem").value();
+        const nome = document.getElementById("nome").value;
+        const mensagem = document.getElementById("mensagem").value;
         const telefone = "5511977486022";
-        const texto = `Opa me chamo ${nome}, ${mensagem}`;
+
+        const texto = `Opa, me chamo ${nome}. ${mensagem}`;
         const msgformat = encodeURIComponent(texto);
 
         const url = `https://wa.me/${telefone}?text=${msgformat}`;
@@ -119,4 +120,3 @@
     </script>
   </body>
 </html>
-
