--- a/index.html
+++ b/index.html
@@ -12,34 +12,25 @@
 
     <nav class="navegacao">
       <ul class="menu">
-        <li>
-          <a href="#inicio" class="menu-link">Início</a>
-        </li>
-
-        <li>
-          <a href="#sobre" class="menu-link">Sobre</a>
-        </li>
-
-        <li>
-          <a href="#projetos" class="menu-link">Projetos</a>
-        </li>
-
-        <li>
-          <a href="#contato" class="menu-link">Contato</a>
-        </li>
+        <li><a href="#inicio" class="menu-link">Início</a></li>
+        <li><a href="#sobre" class="menu-link">Sobre</a></li>
+        <li><a href="#projetos" class="menu-link">Projetos</a></li>
+        <li><a href="#contato" class="menu-link">Contato</a></li>
       </ul>
     </nav>
+
     <main id="inicio" class="cabecalho">
       <img src="./img/Eu3.jpeg" alt="fotin de perfil" class="foto-perfil" />
       <h1>Sandwz</h1>
       <p class="cabecalho-sub">Desenvolvo Programas</p>
     </main>
+
     <section id="sobre" class="sobre">
       <h2 class="sobre-titulo">Sobre mim</h2>
       <div class="sobre-caixa">
         <p class="sobre-paragrafo">
-          Faço programas basicos em python, sei um pouco de html e css e quero
-          me desenvolver mais para saber um pouco de cada coisa nesse ramo
+          Faço programas básicos em Python, sei um pouco de HTML e CSS e quero
+          me desenvolver mais para saber um pouco de cada coisa nesse ramo.
         </p>
       </div>
     </section>
@@ -47,57 +38,43 @@
     <section id="projetos" class="projetos">
       <h2 class="projetos-titulo">Meus projetos</h2>
       <div class="projetos-caixa">
-        <div class="projetos-card">
-          <img
-            src="./img/playlist.png"
-            alt="Projeto 1"
-            class="projetos-imagem"
-          />
+
+        <!-- PROJETO 1 -->
+        <a href="https://seu-link-1.com" target="_blank" class="projetos-card">
+          <img src="./img/playlist.png" alt="Projeto 1" class="projetos-imagem" />
           <div class="caixa-texto-projeto">
             <h3 class="info-projetos">Playlist Compartilhada</h3>
             <p class="projeto-paragrafo">
-              É uma Playlist Compartilhada em python onde pode fazer troca de
-              usuario e cada usuario adicionar musica em uma unica playlist,
-              onde foi um projeto de escola
+              Uma playlist colaborativa em Python com troca de usuário e adição de músicas.
             </p>
           </div>
-        </div>
-        <div class="projetos-card">
-          <img
-            src="./img/Dicionario.png"
-            alt="Projeto 2"
-            class="projetos-imagem"
-          />
+        </a>
+
+        <!-- PROJETO 2 -->
+        <a href="https://seu-link-2.com" target="_blank" class="projetos-card">
+          <img src="./img/Dicionario.png" alt="Projeto 2" class="projetos-imagem" />
           <div class="caixa-texto-projeto">
             <h3 class="info-projetos">Dicionário em Inglês</h3>
             <p class="projeto-paragrafo">
-              É um Dicionário em Inglês em python que fala a tradução e tem
-              filtro, é onde foi um projeto de escola
+              Dicionário em Python com tradução e filtro de palavras.
             </p>
           </div>
-        </div>
+        </a>
+
       </div>
     </section>
 
     <section id="contato" class="contato">
       <h2 class="contatos-titulo">Entre em Contato</h2>
-      <form
-        class="formulario-contato"
-        id="formulario"
-        onsubmit="enviarWhats(event)"
-      >
+      <form class="formulario-contato" id="formulario" onsubmit="enviarWhats(event)">
         <div class="grupo-form">
           <input placeholder="Nome" class="campo-form" id="nome" />
         </div>
 
         <div class="grupo-form">
-          <textarea
-            class="campo-form"
-            placeholder="Digite sua mensagem"
-            rows="5"
-            id="mensagem"
-          ></textarea>
+          <textarea class="campo-form" placeholder="Digite sua mensagem" rows="5" id="mensagem"></textarea>
         </div>
+
         <button type="submit" class="botao-form">Enviar via Whatsapp</button>
       </form>
     </section>
@@ -114,9 +91,9 @@
         const msgformat = encodeURIComponent(texto);
 
         const url = `https://wa.me/${telefone}?text=${msgformat}`;
-
         window.open(url, "_blank");
       }
     </script>
+
   </body>
 </html>
