Fix HTML structure and update project links

--- a/index.html
+++ b/index.html
@@ -38,21 +38,37 @@
     <section id="projetos" class="projetos">
       <h2 class="projetos-titulo">Meus projetos</h2>
       <div class="projetos-caixa">
-
         <!-- PROJETO 1 -->
-        <a href="https://seu-link-1.com" target="_blank" class="projetos-card">
-          <img src="./img/playlist.png" alt="Projeto 1" class="projetos-imagem" />
+        <a
+          href="https://github.com/fagpc044/Trabalhos/blob/main/PlaylistCompartilhada.py"
+          target="_blank"
+          class="projetos-card"
+        >
+          <img
+            src="./img/playlist.png"
+            alt="Projeto 1"
+            class="projetos-imagem"
+          />
           <div class="caixa-texto-projeto">
             <h3 class="info-projetos">Playlist Compartilhada</h3>
             <p class="projeto-paragrafo">
-              Uma playlist colaborativa em Python com troca de usuário e adição de músicas.
+              Uma playlist colaborativa em Python com troca de usuário e adição
+              de músicas.
             </p>
           </div>
         </a>
 
         <!-- PROJETO 2 -->
-        <a href="https://seu-link-2.com" target="_blank" class="projetos-card">
-          <img src="./img/Dicionario.png" alt="Projeto 2" class="projetos-imagem" />
+        <a
+          href="https://github.com/fagpc044/Trabalhos/blob/main/dicionário_English.py"
+          target="_blank"
+          class="projetos-card"
+        >
+          <img
+            src="./img/Dicionario.png"
+            alt="Projeto 2"
+            class="projetos-imagem"
+          />
           <div class="caixa-texto-projeto">
             <h3 class="info-projetos">Dicionário em Inglês</h3>
             <p class="projeto-paragrafo">
@@ -60,19 +76,27 @@
             </p>
           </div>
         </a>
-
       </div>
     </section>
 
     <section id="contato" class="contato">
       <h2 class="contatos-titulo">Entre em Contato</h2>
-      <form class="formulario-contato" id="formulario" onsubmit="enviarWhats(event)">
+      <form
+        class="formulario-contato"
+        id="formulario"
+        onsubmit="enviarWhats(event)"
+      >
         <div class="grupo-form">
           <input placeholder="Nome" class="campo-form" id="nome" />
         </div>
 
         <div class="grupo-form">
-          <textarea class="campo-form" placeholder="Digite sua mensagem" rows="5" id="mensagem"></textarea>
+          <textarea
+            class="campo-form"
+            placeholder="Digite sua mensagem"
+            rows="5"
+            id="mensagem"
+          ></textarea>
         </div>
 
         <button type="submit" class="botao-form">Enviar via Whatsapp</button>
@@ -94,6 +118,5 @@
         window.open(url, "_blank");
       }
     </script>
-
   </body>
 </html>
