--- a/index.html
+++ b/index.html
@@ -1,122 +1,105 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Portfólio</title>
-  </head>
 
-  <body>
-    <div class="particulas"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Portfólio</title>
+</head>
 
-    <nav class="navegacao">
-      <ul class="menu">
-        <li><a href="#inicio" class="menu-link">Início</a></li>
-        <li><a href="#sobre" class="menu-link">Sobre</a></li>
-        <li><a href="#projetos" class="menu-link">Projetos</a></li>
-        <li><a href="#contato" class="menu-link">Contato</a></li>
-      </ul>
-    </nav>
+<body>
+  <div class="particulas"></div>
 
-    <main id="inicio" class="cabecalho">
-      <img src="./img/Eu3.jpeg" alt="fotin de perfil" class="foto-perfil" />
-      <h1>Sandwz</h1>
-      <p class="cabecalho-sub">Desenvolvo Programas</p>
-    </main>
+  <nav class="navegacao">
+    <ul class="menu">
+      <li><a href="#inicio" class="menu-link">Início</a></li>
+      <li><a href="#sobre" class="menu-link">Sobre</a></li>
+      <li><a href="#projetos" class="menu-link">Projetos</a></li>
+      <li><a href="#contato" class="menu-link">Contato</a></li>
+    </ul>
+  </nav>
 
-    <section id="sobre" class="sobre">
-      <h2 class="sobre-titulo">Sobre mim</h2>
-      <div class="sobre-caixa">
-        <p class="sobre-paragrafo">
-          Faço programas básicos em Python, sei um pouco de HTML e CSS e quero
-          me desenvolver mais para saber um pouco de cada coisa nesse ramo.
-        </p>
-      </div>
-    </section>
+  <main id="inicio" class="cabecalho">
+    <img src="./img/Eu3.jpeg" alt="fotin de perfil" class="foto-perfil" />
+    <h1>Sandwz</h1>
+    <p class="cabecalho-sub">Desenvolvo Programas</p>
+  </main>
 
-    <section id="projetos" class="projetos">
-      <h2 class="projetos-titulo">Meus projetos</h2>
-      <div class="projetos-caixa">
-        <!-- PROJETO 1 -->
-        <a
-          href="https://github.com/fagpc044/Trabalhos/blob/main/PlaylistCompartilhada.py"
-          target="_blank"
-          class="projetos-card"
-        >
-          <img
-            src="./img/playlist.png"
-            alt="Projeto 1"
-            class="projetos-imagem"
-          />
-          <div class="caixa-texto-projeto">
-            <h3 class="info-projetos">Playlist Compartilhada</h3>
-            <p class="projeto-paragrafo">
-              Uma playlist colaborativa em Python com troca de usuário e adição
-              de músicas.
-            </p>
-          </div>
-        </a>
+  <section id="sobre" class="sobre">
+    <h2 class="sobre-titulo">Sobre mim</h2>
+    <div class="sobre-caixa">
+      <p class="sobre-paragrafo">
+        Faço programas básicos em Python, sei um pouco de HTML e CSS e quero
+        me desenvolver mais para saber um pouco de cada coisa nesse ramo.
+        Habilidades:
+        •Sei trabalhar em equipe
+        •Proativo
+        •Desenvolvo rápido
+      </p>
+    </div>
+  </section>
 
-        <!-- PROJETO 2 -->
-        <a
-          href="https://github.com/fagpc044/Trabalhos/blob/main/dicionário_English.py"
-          target="_blank"
-          class="projetos-card"
-        >
-          <img
-            src="./img/Dicionario.png"
-            alt="Projeto 2"
-            class="projetos-imagem"
-          />
-          <div class="caixa-texto-projeto">
-            <h3 class="info-projetos">Dicionário em Inglês</h3>
-            <p class="projeto-paragrafo">
-              Dicionário em Python com tradução e filtro de palavras.
-            </p>
-          </div>
-        </a>
-      </div>
-    </section>
-
-    <section id="contato" class="contato">
-      <h2 class="contatos-titulo">Entre em Contato</h2>
-      <form
-        class="formulario-contato"
-        id="formulario"
-        onsubmit="enviarWhats(event)"
-      >
-        <div class="grupo-form">
-          <input placeholder="Nome" class="campo-form" id="nome" />
+  <section id="projetos" class="projetos">
+    <h2 class="projetos-titulo">Meus projetos</h2>
+    <div class="projetos-caixa">
+      <!-- PROJETO 1 -->
+      <a href="https://github.com/fagpc044/Trabalhos/blob/main/PlaylistCompartilhada.py" target="_blank"
+        class="projetos-card">
+        <img src="./img/playlist.png" alt="Projeto 1" class="projetos-imagem" />
+        <div class="caixa-texto-projeto">
+          <h3 class="info-projetos">Playlist Compartilhada</h3>
+          <p class="projeto-paragrafo">
+            Uma playlist colaborativa em Python com troca de usuário e adição
+            de músicas.
+          </p>
         </div>
+      </a>
 
-        <div class="grupo-form">
-          <textarea
-            class="campo-form"
-            placeholder="Digite sua mensagem"
-            rows="5"
-            id="mensagem"
-          ></textarea>
+      <!-- PROJETO 2 -->
+      <a href="https://github.com/fagpc044/Trabalhos/blob/main/dicionário_English.py" target="_blank"
+        class="projetos-card">
+        <img src="./img/Dicionario.png" alt="Projeto 2" class="projetos-imagem" />
+        <div class="caixa-texto-projeto">
+          <h3 class="info-projetos">Dicionário em Inglês</h3>
+          <p class="projeto-paragrafo">
+            Dicionário em Python com tradução e filtro de palavras.
+          </p>
         </div>
+      </a>
+    </div>
+  </section>
 
-        <button type="submit" class="botao-form">Enviar via Whatsapp</button>
-      </form>
-    </section>
+  <section id="contato" class="contato">
+    <h2 class="contatos-titulo">Entre em Contato</h2>
+    <form class="formulario-contato" id="formulario" onsubmit="enviarWhats(event)">
+      <div class="grupo-form">
+        <input placeholder="Nome" class="campo-form" id="nome" />
+      </div>
 
-    <script>
-      function enviarWhats(event) {
-        event.preventDefault();
+      <div class="grupo-form">
+        <textarea class="campo-form" placeholder="Digite sua mensagem" rows="5" id="mensagem"></textarea>
+      </div>
 
-        const nome = document.getElementById("nome").value;
-        const mensagem = document.getElementById("mensagem").value;
-        const telefone = "5511977486022";
+      <button type="submit" class="botao-form">Enviar via Whatsapp</button>
+    </form>
+  </section>
 
-        const texto = `Opa, me chamo ${nome}. ${mensagem}`;
-        const msgformat = encodeURIComponent(texto);
+  <script>
+    function enviarWhats(event) {
+      event.preventDefault();
 
-        const url = `https://wa.me/${telefone}?text=${msgformat}`;
-        window.open(url, "_blank");
-      }
-    </script>
-  </body>
+      const nome = document.getElementById("nome").value;
+      const mensagem = document.getElementById("mensagem").value;
+      const telefone = "5511977486022";
+
+      const texto = `Opa, me chamo ${nome}. ${mensagem}`;
+      const msgformat = encodeURIComponent(texto);
+
+      const url = `https://wa.me/${telefone}?text=${msgformat}`;
+      window.open(url, "_blank");
+    }
+  </script>
+</body>
+
 </html>
