--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         Faço programas básicos em Python, sei um pouco de HTML e CSS e quero
         me desenvolver mais para saber um pouco de cada coisa nesse ramo.
         Habilidades:
-        •Sei trabalhar em equipe
-        •Proativo
-        •Desenvolvo rápido
+        <p>•Sei trabalhar em equipe</p>
+        <p>•Proativo</p>
+        <p>•Desenvolvo rápido</p>
       </p>
     </div>
   </section>
@@ -103,3 +103,4 @@
 </body>
 
 </html>
+
