--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         Faço programas básicos em Python, sei um pouco de HTML e CSS e quero
         me desenvolver mais para saber um pouco de cada coisa nesse ramo.
         Habilidades:
-        <p>•Sei trabalhar em equipe</p>
-        <p>•Proativo</p>
-        <p>•Desenvolvo rápido</p>
+        •Sei trabalhar em equipe
+        •Proativo<
+        •Desenvolvo rápido
       </p>
     </div>
   </section>
@@ -103,4 +103,5 @@
 </body>
 
 </html>
+
 
