Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         me desenvolver mais para saber um pouco de cada coisa nesse ramo.
         Habilidades:
         •Sei trabalhar em equipe
-        •Proativo<
+        •Proativo
         •Desenvolvo rápido
       </p>
     </div>
@@ -103,5 +103,6 @@
 </body>
 
 </html>
+
 
 
