Adicionei mais projetos
Added new projects and updated contact form functionality.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,26 @@
           </p>
         </div>
       </a>
+      <!-- PROJETO 3 -->
+      <a href="https://loginzinhtmlcss.netlify.app" target="_blank" class="projetos-card">
+        <img src="./img/Login.png" alt="Projeto 2" class="projetos-imagem" />
+        <div class="caixa-texto-projeto">
+          <h3 class="info-projetos">Login Simples</h3>
+          <p class="projeto-paragrafo">
+            Login simples, onde só está feito a parte visual.
+          </p>
+        </div>
+      </a>
+      <!-- PROJETO 4 -->
+      <a href="listinhahtml.netlify.app" target="_blank" class="projetos-card">
+        <img src="./img/Lista.png" alt="Projeto 2" class="projetos-imagem" />
+        <div class="caixa-texto-projeto">
+          <h3 class="info-projetos">Lista Simples</h3>
+          <p class="projeto-paragrafo">
+            Lista simples, onde só está feito a parte visual.
+          </p>
+        </div>
+      </a>
     </div>
   </section>
 
@@ -103,6 +123,3 @@
 </body>
 
 </html>
-
-
-
