Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </a>
       <!-- PROJETO 3 -->
       <a href="https://loginzinhtmlcss.netlify.app" target="_blank" class="projetos-card">
-        <img src="./img/Login.png" alt="Projeto 2" class="projetos-imagem" />
+        <img src="./img/Login.png" alt="Projeto 3" class="projetos-imagem" />
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Login Simples</h3>
           <p class="projeto-paragrafo">
@@ -79,12 +79,21 @@
       </a>
       <!-- PROJETO 4 -->
       <a href="listinhahtml.netlify.app" target="_blank" class="projetos-card">
-        <img src="./img/Lista.png" alt="Projeto 2" class="projetos-imagem" />
+        <img src="./img/Lista.png" alt="Projeto 4" class="projetos-imagem" />
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Lista Simples</h3>
           <p class="projeto-paragrafo">
             Lista simples, onde só está feito a parte visual.
           </p>
+        </div>
+      </a>
+       <!-- PROJETO 5 -->
+      <a href="https://cardiznho.netlify.app" target="_blank" class="projetos-card">
+        <img src="./img/Card.png" alt="Projeto 5" class="projetos-imagem" />
+        <div class="caixa-texto-projeto">
+          <h3 class="info-projetos">Card Simples</h3>
+          <p class="projeto-paragrafo">
+            Card simples, onde fiz usando o card do portifolio de exemplo.
         </div>
       </a>
     </div>
