--- a/index.html
+++ b/index.html
@@ -68,27 +68,17 @@
         </div>
       </a>
       <!-- PROJETO 3 -->
-      <a href="https://loginzinhtmlcss.netlify.app" target="_blank" class="projetos-card">
-        <img src="./img/Login.png" alt="Projeto 3" class="projetos-imagem" />
+      <a href="https://loginzinhoiiiiiiiiiiiiiiiiiiiiiiii.netlify.app" target="_blank" class="projetos-card">
+        <img src="./img/Form.png" alt="Projeto 3" class="projetos-imagem" />
         <div class="caixa-texto-projeto">
-          <h3 class="info-projetos">Login Simples</h3>
+          <h3 class="info-projetos">Formulario Simples</h3>
           <p class="projeto-paragrafo">
-            Login simples, onde só está feito a parte visual.
+            Formulario simples, onde só está feito a parte visual.
           </p>
         </div>
       </a>
       <!-- PROJETO 4 -->
-      <a href="listinhahtml.netlify.app" target="_blank" class="projetos-card">
-        <img src="./img/Lista.png" alt="Projeto 4" class="projetos-imagem" />
-        <div class="caixa-texto-projeto">
-          <h3 class="info-projetos">Lista Simples</h3>
-          <p class="projeto-paragrafo">
-            Lista simples, onde só está feito a parte visual.
-          </p>
-        </div>
-      </a>
-       <!-- PROJETO 5 -->
-      <a href="https://cardiznho.netlify.app" target="_blank" class="projetos-card">
+      <a href="https://cardzinhoa.netlify.app" target="_blank" class="projetos-card">
         <img src="./img/Card.png" alt="Projeto 5" class="projetos-imagem" />
         <div class="caixa-texto-projeto">
           <h3 class="info-projetos">Card Simples</h3>
